# sparrow

./: Cargo.toml
src/: bench.rs  config.rs  consts.rs  lib.rs  main.rs
src/eval/: lbf_evaluator.rs  mod.rs  sample_eval.rs  sep_evaluator.rs  specialized_jaguars_pipeline.rs
src/optimizer/: compress.rs  explore.rs  lbf.rs  mod.rs  separator.rs  worker.rs
src/quantify/: mod.rs  overlap_proxy.rs  pair_matrix.rs  tracker.rs
src/quantify/simd/: circles_soa.rs  mod.rs  overlap_proxy_simd.rs
src/sample/: best_samples.rs  coord_descent.rs  mod.rs  search.rs  uniform_sampler.rs
src/util/: assertions.rs  bit_reversal_iterator.rs  ctrlc_terminator.rs  io.rs  listener.rs  mod.rs  svg_exporter.rs  terminator.rs
tests/: tests.rs
