[package]
name = "sparrow"
version = "0.1.0"
edition = "2024"
description = "State-of-the-art nesting heuristic for 2D irregular strip packing problems"

[dependencies]
jagua-rs = { features = ["spp"], git = "https://github.com/JeroenGar/jagua-rs.git", rev = "b85d9268e46f4273b673325b172caee7b6116583"}
rand = "0.9"
rand_distr = "0.5"
svg = "0.18"
itertools = "0.14"
log = { version = "0.4", features = ["release_max_level_info"] }
tap = "1.0"
slotmap = "1.0"
float-cmp = "0.10"
ordered-float = "5.0"
rayon = "1.10"
anyhow = "1.0"
rand_xoshiro = "0.7"

[features]
simd = []

[profile.dev]
overflow-checks = true

[profile.debug-release]
inherits = "release"
debug-assertions = true
debug = true

[profile.release]
opt-level = 3
lto = "fat"

[profile.test]
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true